Add info about sample stat distro

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -80,28 +80,34 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d0a38ffa-6201-475c-d4e6-08d507fd038d"
+        "outputId": "4804d382-d38e-43a3-e1b7-76b734f76b5a"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "remote: Enumerating objects: 7, done.\u001b[K\n",
-            "remote: Counting objects:  14% (1/7)\u001b[K\rremote: Counting objects:  28% (2/7)\u001b[K\rremote: Counting objects:  42% (3/7)\u001b[K\rremote: Counting objects:  57% (4/7)\u001b[K\rremote: Counting objects:  71% (5/7)\u001b[K\rremote: Counting objects:  85% (6/7)\u001b[K\rremote: Counting objects: 100% (7/7)\u001b[K\rremote: Counting objects: 100% (7/7), done.\u001b[K\n",
-            "remote: Compressing objects:  25% (1/4)\u001b[K\rremote: Compressing objects:  50% (2/4)\u001b[K\rremote: Compressing objects:  75% (3/4)\u001b[K\rremote: Compressing objects: 100% (4/4)\u001b[K\rremote: Compressing objects: 100% (4/4), done.\u001b[K\n",
-            "remote: Total 4 (delta 3), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects:  25% (1/4)\rUnpacking objects:  50% (2/4)\rUnpacking objects:  75% (3/4)\rUnpacking objects: 100% (4/4)\rUnpacking objects: 100% (4/4), 999 bytes | 999.00 KiB/s, done.\n",
-            "From https://github.com/aminehd/AminehTechnicalWritings\n",
-            "   c4f3b5a..0d666e8  main       -> origin/main\n",
-            "Updating c4f3b5a..0d666e8\n",
-            "Fast-forward\n",
-            " src/sampling_utils.py | 2 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-            " 1 file changed, 1 insertion(+), 1 deletion(-)\n"
+            "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
+            "Cloning into 'AminehTechnicalWritings'...\n",
+            "remote: Enumerating objects: 620, done.\u001b[K\n",
+            "remote: Counting objects: 100% (133/133), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (133/133), done.\u001b[K\n",
+            "remote: Total 620 (delta 89), reused 0 (delta 0), pack-reused 487\u001b[K\n",
+            "Receiving objects: 100% (620/620), 4.07 MiB | 8.56 MiB/s, done.\n",
+            "Resolving deltas: 100% (398/398), done.\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VcWnrcwsBHGq"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -483,7 +489,7 @@
         "Here!!! develop a Population class that let's add predictor, change response, partition responses based on preds...\n",
         "\n",
         "\n",
-        "In the above graph, there are three sample sets: green with the highest responses, red with the lowest responses, and yellow, which is sampled with replacement. Visually, they appear different. To discuss their differences more accurately, we can also compute [sample statistics](<https://en.wikipedia.org/wiki/Statistic>) for each sample. Let's define sample satatistic and its distribution over multiple sample of same population\n",
+        "In the above graph, there are three sample sets: green with the highest responses, red with the lowest responses, and yellow, which is sampled with replacement. Visually, they appear different and perhaps if you fit a linear model on each of them you'll get different errros and different coefficients. To discuss their differences more accurately, we can also compute [sample statistics](<https://en.wikipedia.org/wiki/Statistic>) for each sample.\n",
         "\n",
         "\n",
         "\n"
@@ -497,9 +503,11 @@
       "source": [
         "### Sample statistic and its distribution and expectation\n",
         "\n",
-        "Sample is a subset of a population. So any [mathematical measure](https://en.wikipedia.org/wiki/Measure_(mathematics))  can be defnied as a sample stat. HERE!!! continiue by talking about sample mean as example  \n",
+        "Sample is a subset of a population. Any [mathematical measure](https://en.wikipedia.org/wiki/Measure_(mathematics))  can be defnied as a sample stat. HERE!!! continiue by talking about sample mean as example.\n",
         "\n",
         "We can talk about sample mean as an example of sample statistic. The sample mean for green sample is --, for yellow in --- and for red is ---, while population mean is ---. You can see sample mean for green and red sample are higher and lower than sample population, respectively. Also the samle mean for the yellow one is close to the population mean.  (HERE!!! fill numbers)\n",
+        "\n",
+        "Now if you go over all samples from population and calculates their mean and plot them, you have a distribution graph of sample mean over all samples.\n",
         "\n",
         "There are ${m \\choose 100}$ ways to pick a sample of size 100, where 'm' is the size of the population. Therefore, we get ${m \\choose 100}$ sample means for the given size. This yields a decent  number of data points. This gives us a [sampling distribution](<https://en.wikipedia.org/wiki/Sampling_distribution>) of the sample mean. Hopefully all this setup will make you feel an urge to graph the sample means:\n",
         " HERE!!! (do the graph)"
