Elaborate on sample mean

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -82,7 +82,7 @@
         },
         "outputId": "4804d382-d38e-43a3-e1b7-76b734f76b5a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,9 +503,10 @@
       "source": [
         "### Sample statistic and its distribution and expectation\n",
         "\n",
-        "Sample is a subset of a population. Any [mathematical measure](https://en.wikipedia.org/wiki/Measure_(mathematics))  can be defnied as a sample stat. HERE!!! continiue by talking about sample mean as example.\n",
         "\n",
-        "We can talk about sample mean as an example of sample statistic. The sample mean for green sample is --, for yellow in --- and for red is ---, while population mean is ---. You can see sample mean for green and red sample are higher and lower than sample population, respectively. Also the samle mean for the yellow one is close to the population mean.  (HERE!!! fill numbers)\n",
+        "We can talk about sample mean as an example of sample statistic. First let's notice a few facts about the means as a measure or stat on a set. The population has a mean that is equal to ----. Also each sample data set has mean. For example the sample mean for green sample is --, for yellow in --- and for red is ---, while population mean is ---. You can see sample mean for green and red sample are higher and lower than sample population, respectively. Also the samle mean for the yellow one is close to the population mean.  (HERE!!! fill numbers)\n",
+        "\n",
+        " The cool thing about mean as a statistic measure is that it is unbiased. HERE!!! Define unbiased.\n",
         "\n",
         "Now if you go over all samples from population and calculates their mean and plot them, you have a distribution graph of sample mean over all samples.\n",
         "\n",
