--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -82,7 +82,7 @@
         },
         "outputId": "4cb1fd4f-3ca3-4f44-e7e7-cdeebf384df8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +171,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +293,7 @@
       "metadata": {
         "id": "OSu41WDF_GAe"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +314,7 @@
         "id": "C8IKsSGKKfew",
         "outputId": "b49c9b10-b75f-4c51-c130-02c13eae20ba"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -359,7 +359,7 @@
         "id": "1eL3gw9uWYc-",
         "outputId": "fde11be3-4915-41cc-c385-f9982426fa28"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -435,7 +435,7 @@
       "metadata": {
         "id": "0RDBgr3OMew4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -459,7 +459,7 @@
           "height": 447
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +496,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,8 +531,13 @@
         "\n",
         "We can talk about sample mean as an example of sample statistic. First let's notice a few facts about the means as a measure or stat on a set. The population has a mean that is equal to `15.00`. Also each sample data set has mean. For example the sample mean for green sample is `19.78`, for yellow in `15.95` and for red is `12.08`, while population mean is `15.00`. You can see sample mean for green and red sample are higher and lower than sample population, respectively. Also the samle mean for the yellow one is close to the population mean.  \n",
         "\n",
-        " The cool thing about mean as a statistic measure is that it is unbiased. HERE!!! Define unbiased.\n",
+        "Next big thing to wrap our head around is an unbiased estimator. I would call it an unbiased measure if I could but technically and politically it is not correct. Why we use the term estimator? It comes from the fact that sample is a subset of population, thus values of a given sample measures is different from those of population. If we use the value use the sample mean as an estimation of population mean, we estimated population mean with sample mean.\n",
         "\n",
+        "If we use the sample mean ($\\bar{y}$), to estimate the population mean (𝜇), this estimate is unbiased. This means that on average, we expect $\\bar{y}$\n",
+        "  to equal 𝜇. HERE!!! Continue with the estimator for beta_0 and beta_ 1. Then you can talk about , distribution of such estimation ,accuracy of this estimation and standard err of such.\n",
+        "\n",
+        "\n",
+        "  \n",
         "Now if you go over all samples from population and calculates their mean and plot them, you have a distribution graph of sample mean over all samples.\n",
         "\n",
         "There are ${m \\choose 100}$ ways to pick a sample of size 100, where 'm' is the size of the population. Therefore, we get ${m \\choose 100}$ sample means for the given size. This yields a decent  number of data points. This gives us a [sampling distribution](<https://en.wikipedia.org/wiki/Sampling_distribution>) of the sample mean. Hopefully all this setup will make you feel an urge to graph the sample means:\n",
