--- a/assignments/ISLP_Chapter03.ipynb
+++ b/assignments/ISLP_Chapter03.ipynb
@@ -1046,24 +1046,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "qBsnQRIH9ZDB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "RSS is hight but no benchmark to tell how good or bad this rss is.\n",
+        "RSS is high but no benchmark to tell how good or bad this rss is.\n",
         "R^2 is a good benchmark. Since it is equal to 0.61, we can say 61 percent of variation in response(mpg) is explained by horsepower\n",
         "\n",
         "(a) iii. Is relation between `horsepower` and mpg negative or posititve?\n",
         "negative because the coefficient of horsepower is -0.15\n",
         "\n",
-        "(a) iii. What is the mpg associated with the horsepower equal to 98?\n"
+        "(a) iv. What is the mpg associated with the horsepower equal to 98?\n"
       ],
       "metadata": {
         "id": "9j_16C_-6u6R"
@@ -1078,11 +1069,11 @@
         "results.predict(X)"
       ],
       "metadata": {
-        "id": "LdiI0iS-9Nog",
-        "outputId": "0c720f79-7fed-4ef2-9f34-547cde36928a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LdiI0iS-9Nog",
+        "outputId": "0c720f79-7fed-4ef2-9f34-547cde36928a"
       },
       "execution_count": 25,
       "outputs": [
@@ -1102,7 +1093,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "(a) iii. What is the associated 95 % confidence and prediction interval?"
+        "(a) iv. What is the associated 95 % confidence and prediction interval?"
       ],
       "metadata": {
         "id": "A4F2i1gVAlP-"
