--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -536,7 +536,7 @@
         "\n",
         "Next big thing to wrap our head around is an unbiased estimator.\n",
         "If we use the sample mean ($\\bar{y}$), to estimate the population mean (𝜇), this estimate is unbiased. This means that on average, we expect $\\bar{y}$\n",
-        "  to equal population mean that is 𝜇 . HERE!!! Continue with the estimator for beta_0 and beta_ 1. Then you can talk about , distribution of such estimation ,accuracy of this estimation and standard err of such.\n",
+        "  to equal population mean that is 𝜇 . HERE!!! move it to after sampling distribution as an extra point. Continue with the estimator for beta_0 and beta_ 1. Then you can talk about , distribution of such estimation ,accuracy of this estimation and standard err of such.\n",
         "\n",
         "\n",
         "  \n",
