--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -624,7 +624,8 @@
     {
       "cell_type": "code",
       "source": [
-        "HERE!!!! TODO!. Calculate t-stat for all samples given same size, when beta is 0, draw distrition"
+        "HERE!!! Talk about T distro, confidence interval proof https://online.stat.psu.edu/stat415/lesson/7/7.5,\n",
+        "HERE!!! Talk about  the meaning of p-value (we set beta to 0 in one before the last Theorem)"
       ],
       "metadata": {
         "id": "yIbKD-Ad7nf5"
