--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -22,7 +22,10 @@
         "    - Assumptions about population: Error terms has a normal distribution. But what's error term?\n",
         "    - Assumptions about sample: But didn't we talk about assumptions about population?\n",
         "    - Sample statistic and its distribution and expectation\n",
-        "    - Why $\\widehat{\\beta}$ and not just $\\beta$\n",
+        "\n",
+        "      - sample estimator, distribution of it, standard error of it HERE!!!\n",
+        "      - Why $\\widehat{\\beta}$ and not just $\\beta$\n",
+        "      - HERE!!! delete the rest and reorg outline\n",
         "    - Visualize the assumptions: line fitting\n",
         "  - Transition from intuitive descriptions to mathematical formulation\n",
         "    \n",
@@ -531,12 +534,6 @@
         "\n",
         "We can talk about sample mean as an example of sample statistic. First let's notice a few facts about the means as a measure or stat on a set. The population has a mean that is equal to `15.00`. Also each sample data set has mean. For example the sample mean for green sample is `19.78`, for yellow in `15.95` and for red is `12.08`, while population mean is `15.00`. You can see sample mean for green and red sample are higher and lower than sample population, respectively. Also the samle mean for the yellow one is close to the population mean.  \n",
         "\n",
-        "One can **estimate** the population mean with the sample mean. Then one sample mean is an **estimator** function. We just added a new  concept (**estimator**) to the picture, and it is a big deal. If I were to create statistic from scratch, I would not add a new concept every 10 minutes. But  I  wasn't involved in creation of statistic as a new branch of science, so I just struggle and share it with the world.\n",
-        "\n",
-        "\n",
-        "Next big thing to wrap our head around is an unbiased estimator.\n",
-        "If we use the sample mean ($\\bar{y}$), to estimate the population mean (𝜇), this estimate is unbiased. This means that on average, we expect $\\bar{y}$\n",
-        "  to equal population mean that is 𝜇 . HERE!!! move it to after sampling distribution as an extra point. Continue with the estimator for beta_0 and beta_ 1. Then you can talk about , distribution of such estimation ,accuracy of this estimation and standard err of such.\n",
         "\n",
         "\n",
         "  \n",
@@ -601,7 +598,20 @@
         "\n",
         "Take any statistics (a measure on a set), such as sample mean, and think about what would be the all possible outcomes over all samplings. That would give you a distribution again. Thus you can say stuff about the variance of it (see [sample Variance ](https://en.wikipedia.org/wiki/Variance#Sample_variance). Knowing such variance you can measure how much it might deviate (see [standard error](https://en.wikipedia.org/wiki/Standard_error)).\n",
         "\n",
-        "Finally, if you fit the model for the sample, and not for the population, you can calculate the [variance of the predicted response](https://en.wikipedia.org/wiki/Variance_of_the_mean_and_predicted_responses). I talk about it more in the  [next notebook](https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/notebookes/LinearRegressionMatrix.ipynb#scrollTo=cwhNfPNNkFAH) ). (HERE!!! add the example about the sample mean HERE!!!!) (HERE!!!! link to next notebook) .\n",
+        "One can **estimate** the population mean with the sample mean. Then one sample mean is an **estimator** function. We just added a new  concept (**estimator**) to the picture, and it is a big deal. If I were to create statistic from scratch, I would not add a new concept every 10 minutes. But  I  wasn't involved in creation of statistic as a new branch of science, so I just struggle and share it with the world.\n",
+        "\n",
+        "\n",
+        "Next big thing to wrap our head around is an unbiased estimator.\n",
+        "If we use the sample mean ($\\bar{y}$), to estimate the population mean (𝜇), this estimate is unbiased. This means that on average, we expect $\\bar{y}$\n",
+        "  to equal population mean that is 𝜇 . HERE!!! move it to after sampling distribution as an extra point. Continue with the estimator for beta_0 and beta_ 1. Then you can talk about , distribution of such estimation ,accuracy of this estimation and standard err of such.\n",
+        "\n",
+        "Here!!! lets see the distribution of slope estimator ($\\hat{\\beta_1}$) over all samples. Slope estimator is also an **unbiased** estimator.\n",
+        "\n",
+        "\n",
+        "We saw the disribution of **sample slope estimator** over all possible samples is a guassian whose mean is the true slope for the population. That means we can calculate the standard deviation for this new distribution. So nothing keeps us from calculating such standard deviation, and then calling it *Standard Error* of slope estimator or $SE(\\hat\\beta_1)$ for short.\n",
+        "HERE!!! Bring the se calculation from the below notebooks to the current one\n",
+        "- https://en.wikipedia.org/wiki/Variance_of_the_mean_and_predicted_responses\n",
+        "- https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/notebookes/LinearRegressionMatrix.ipynb#scrollTo=cwhNfPNNkFAH). (HERE!!! add the example about the sample mean HERE!!!!) (HERE!!!! link to next notebook) .\n",
         "\n",
         "\n",
         "\n",
