Intro to statistics

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -217,20 +217,52 @@
       "cell_type": "markdown",
       "source": [
         "## Introduction\n",
-        "In this notebook, I would like to go through the linear regression concepts. There are several books that has an introduction of this topic.\n",
+        "~~In this notebook, I would like to go through the linear regression concepts. There are several books that has an introduction of this topic.~\n",
         "\n",
-        "Usually the tutorial begins with  statistics concepts like understanding **predictors** and **response**, withe aim to train from a **sample** data set.\n",
+        "~Usually the tutorial begins with  statistics concepts like understanding **predictors** and **response**, withe aim to train from a **sample** data set.\n",
         "It is followed by the introduction of matrix notations and loss function.\n",
-        " Ocasionally, at the end, there might be a word or two on how Maximum liklihood or Best Linear Unbiased Estimator  is relevent to the subject.\n",
+        " Ocasionally, at the end, there might be a word or two on how Maximum liklihood or Best Linear Unbiased Estimator  is relevent to the subject.~\n",
         "\n",
         "\n",
-        "So you see, it starts with statistics, then turns to linear algebra and some analysis, and finally a lot of probability that sounds very uncalled for. I found this super annoying because sometime you just wanna learn linear regression, and not statistic, linear algebra and probability (specially if it is on a weekend).\n",
+        "~So you see, it starts with statistics, then turns to linear algebra and some analysis, and finally a lot of probability that sounds very uncalled for. I found this super annoying because sometime you just wanna learn linear regression, and not statistic, linear algebra and probability (specially if it is on a weekend).~\n",
         "\n",
-        "In this notebook, I attempt to teach the linear regression, while separating all this major ideas that comes out of  different fields of study. Specifically, I break it down to $\\textbf{Statistical}$ concepts, $\\textbf{Linear algebraic}$ concepts and $\\textbf{Probability}$.\n",
+        "~In this notebook, I attempt to teach the linear regression, while separating all this major ideas that comes out of  different fields of study. Specifically, I break it down to $\\textbf{Statistical}$ concepts, $\\textbf{Linear algebraic}$ concepts and $\\textbf{Probability}$.~\n",
         "\n",
-        " I also try to implement python function that serves as a mechanism to talk about all this mathematical abstractions. My hope is to give the audience tools to answer their questions about all this concepts using the python utilities .\n",
-        " Some Important nots: I am reading standford book called [ISLP](https://www.statlearning.com/) which is great textbook. Hence I am using their terminologies. This notebook can be used by people who are reading the ISLP book to clarify any confusion.\n",
+        "~I also try to implement python function that serves as a mechanism to talk about all this mathematical abstractions. My hope is to give the audience tools to answer their questions about all this concepts using the python utilities.~\n",
+        " ~Some Important nots: I am reading standford book called [ISLP](https://www.statlearning.com/) which is great textbook. Hence I am using their terminologies. This notebook can be used by people who are reading the ISLP book to clarify any confusion.~~\n",
         "\n",
+        "\n",
+        "Although I can't verify it,  sometimes I objectively feel like it might be impossible to understand what Machine Learning text books are talking about.\n",
+        "It can be due to multiple reasons: one of the appealing ones is that it is impossible to learn anything and that the whole education business is a scam. There are so many evidence for that and this can totally be true.\n",
+        "\n",
+        "However, there can be other reasons for that. For example, sometimes studying machine learning feels like studying statistics. It is not ideal, but knowing a bit of statistic can come handy, in those times.\n",
+        "\n",
+        "Now, statistic is not quite Mathematic but it can turn to some hardcore math shenanigan at any moment. This is still fine. However, if one doesn't know statistic and doesn't know enough math, and doesn't know the other prerequisite, it can become pretty frustrating to understand what people are talking about.\n",
+        "\n",
+        "\n",
+        "My go to trick to learn something as big as statistics, is to start by the history and sheets and giggle part of it. For example, statistics is a bit of social science. And also did you know [Cox](https://en.wikipedia.org/wiki/Gertrude_Mary_Cox) was a lady? And also [How Eugenics shaped statistics](https://nautil.us/how-eugenics-shaped-statistics-238014/). Unfortunately, if you go down that path, as much as it makes you knowledgable and witty a person, you still would not be understand Machine learning books.\n",
+        "\n",
+        "For that reason, let's narrow down our focus to Linear regression. Linear regression is to find a line that passes through all data point. It can be generalized as a **model** ($h_\\theta)$ with some hyperparameter (the $\\theta$s). The hyperparameter are the coefficient.\n",
+        "$$\n",
+        "response = \\beta_1 * predictor + \\beta_0\n",
+        "$$\n",
+        "For all responses and all predictors.\n",
+        "\n",
+        "So far it is fine. However, it becomes completely incomprehensive in about 2 more sentence later.\n",
+        "\n",
+        "In machine learning, apart from the **model**, we have an *Algorithm* that tries to find the hyper parameters (the $\\theta$s) and we have a data set that algoritm uses. One can say the input of learning algorithm is the model itself and the data set and the out put is model hyperparameters (or the $\\theta$s)\n",
+        "\n",
+        " The most annoying and incomprehensible part of machine learning, and I quote, is the fact that the output of learning *Algorithm*  (or the $\\theta$s) depend on the dataset. So for example if you use half of your data points your model parameters gonna be different form if you had used the whole data set.\n",
+        "\n",
+        " It implies the data matters. 🤯\n",
+        "\n",
+        "Since the data matters a lot, statisticians defined the concepts of population datasets and **sample datasets**. It's nasty. The culprit is that no matter what the given data is, it is only a sample of the whole population. Thus now matter what you measure for the **sample** dataset, (for example the $\\theta$'s) it is only going to be an estimation of the true values for them.\n",
+        "\n",
+        "They also need to formalize stuff (mainly because they are smart and diligent). So they need to refer to the **population** dataset. So in the proofs, you'll see the population dataset and the population stats.\n",
+        "\n",
+        "Something that I found truely eye openning, was the contrast between population and sample data set.\n",
+        "\n",
+        "Rest of this notebook is going to be a lot of other eye openning stuff about the population, about the sample, about the population and sample statitistics, about the estimators, and about their distribution. Read on and be curious like me:) HERE!!!HERE!!!HERE!!! do terminology list for this and draw an outline for rest of the chapter\n",
         "\n",
         "\n",
         "\n"
