--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -17,18 +17,7 @@
         "- Load data in repo\n",
         "- Introduction (Purpose + scope)\n",
         "- Body\n",
-        "  - Statistic:\n",
-        "    - Population vs sample\n",
-        "    - Assumptions about population: Error terms has a normal distribution. But what's error term?\n",
-        "    - Assumptions about sample: But didn't we talk about assumptions about population?\n",
-        "    - Sample statistic and its distribution and expectation\n",
-        "\n",
-        "      - sample estimator, distribution of it, standard error of it HERE!!!\n",
-        "      - Why $\\widehat{\\beta}$ and not just $\\beta$\n",
-        "      - HERE!!! delete the rest and reorg outline\n",
-        "    - Visualize the assumptions: line fitting\n",
-        "  - Transition from intuitive descriptions to mathematical formulation\n",
-        "    \n",
+        "     \n",
         "  - Linear Algebra\n",
         "     - Linear regression is solving linear equations.\n",
         "     - Matrix notation for solving linear equations.\n",
@@ -50,6 +39,25 @@
       ],
       "metadata": {
         "id": "dnGbKJ-RUUuM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Outline\n",
+        "New outline based on [Essay guid](https://essay.app/guide#the-process-of-editing): HERE!!!HERE!!!HERE!!!HERE!!!\n",
+        "\n",
+        "- Is it possible to understand Standard error of regression coefficient? or maybe Confidence interval someday?\n",
+        "- What are they based upon? Why do they sound nonsensical, why they even exsits? Difference of sample and population.\n",
+        "- What are assumptions about populatiod dataset and how can we use them for samples?\n",
+        "- Definision of Sample statistic. Go beyound them and talk about the distribution of sample statistic and plot them.\n",
+        "- Estimator, standard error of them. standard error of a sample estimator.\n",
+        "- Confidence interval, what are we confident about and why? , outline of a proof. t distribution\n",
+        "\n",
+        "AT the end of each headline, list the important keywords"
+      ],
+      "metadata": {
+        "id": "IstVYGEv2dYr"
       }
     },
     {
