Outline and first two paragraphs

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -45,10 +45,12 @@
       "cell_type": "markdown",
       "source": [
         "### Outline\n",
-        "New outline based on [Essay guid](https://essay.app/guide#the-process-of-editing): HERE!!!HERE!!!HERE!!!HERE!!!\n",
+        "New outline based on [Essay guid](https://essay.app/guide#the-process-of-editing): HERE!!!HERE!!!HERE!!!HERE!!! (move linear algebra ones out)\n",
         "\n",
-        "- Is it possible to understand Standard error of regression coefficient? or maybe Confidence interval someday?\n",
-        "- What are they based upon? Why do they sound nonsensical, why they even exsits? Difference of sample and population.\n",
+        "- How to study Machine learning?\n",
+        "- Intro to linear regression.\n",
+        "- What is  Standard error of regression coefficient? or maybe Confidence interval of a regression coefficient? Is it possible to understand them one day?\n",
+        "- What does standard and Error means here? Why it doesnt make any senese? where is error coming from? Answer likes in difference of sample and population.\n",
         "- What are assumptions about populatiod dataset and how can we use them for samples?\n",
         "- Definision of Sample statistic. Go beyound them and talk about the distribution of sample statistic and plot them.\n",
         "- Estimator, standard error of them. standard error of a sample estimator.\n",
@@ -224,31 +226,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction\n",
-        "~~In this notebook, I would like to go through the linear regression concepts. There are several books that has an introduction of this topic.~\n",
-        "\n",
-        "~Usually the tutorial begins with  statistics concepts like understanding **predictors** and **response**, withe aim to train from a **sample** data set.\n",
-        "It is followed by the introduction of matrix notations and loss function.\n",
-        " Ocasionally, at the end, there might be a word or two on how Maximum liklihood or Best Linear Unbiased Estimator  is relevent to the subject.~\n",
-        "\n",
-        "\n",
-        "~So you see, it starts with statistics, then turns to linear algebra and some analysis, and finally a lot of probability that sounds very uncalled for. I found this super annoying because sometime you just wanna learn linear regression, and not statistic, linear algebra and probability (specially if it is on a weekend).~\n",
-        "\n",
-        "~In this notebook, I attempt to teach the linear regression, while separating all this major ideas that comes out of  different fields of study. Specifically, I break it down to $\\textbf{Statistical}$ concepts, $\\textbf{Linear algebraic}$ concepts and $\\textbf{Probability}$.~\n",
-        "\n",
-        "~I also try to implement python function that serves as a mechanism to talk about all this mathematical abstractions. My hope is to give the audience tools to answer their questions about all this concepts using the python utilities.~\n",
-        " ~Some Important nots: I am reading standford book called [ISLP](https://www.statlearning.com/) which is great textbook. Hence I am using their terminologies. This notebook can be used by people who are reading the ISLP book to clarify any confusion.~~\n",
-        "\n",
+        "## How to Study Machine learning\n",
         "\n",
         "Although I can't verify it,  sometimes I objectively feel like it might be impossible to understand what Machine Learning text books are talking about.\n",
-        "It can be due to multiple reasons: one of the appealing ones is that it is impossible to learn anything and that the whole education business is a scam. There are so many evidence for that and this can totally be true.\n",
+        "It can be due to multiple reasons: one of the appealing ones is that really learning anything harder than playing candy crush is impossible. There are so many evidence for that and this can totally be true.\n",
         "\n",
         "However, there can be other reasons for that. For example, sometimes studying machine learning feels like studying statistics. It is not ideal, but knowing a bit of statistic can come handy, in those times.\n",
         "\n",
         "Now, statistic is not quite Mathematic but it can turn to some hardcore math shenanigan at any moment. This is still fine. However, if one doesn't know statistic and doesn't know enough math, and doesn't know the other prerequisite, it can become pretty frustrating to understand what people are talking about.\n",
         "\n",
         "\n",
-        "My go to trick to learn something as big as statistics, is to start by the history and sheets and giggle part of it. For example, statistics is a bit of social science. And also did you know [Cox](https://en.wikipedia.org/wiki/Gertrude_Mary_Cox) was a lady? And also [How Eugenics shaped statistics](https://nautil.us/how-eugenics-shaped-statistics-238014/). Unfortunately, if you go down that path, as much as it makes you knowledgable and witty a person, you still would not be understand Machine learning books.\n",
+        "My go to trick to learn something as big as statistics, is to start by the history and sheets and giggle part of it. For example, statistics is a bit of social science. And also did you know [Cox](https://en.wikipedia.org/wiki/Gertrude_Mary_Cox) was a lady? And also [How Eugenics shaped statistics](https://nautil.us/how-eugenics-shaped-statistics-238014/). Unfortunately, if you go down that path, as much as it makes you knowledgable and witty a person, you still would not be understand Machine learning books.  \n",
+        "\n",
+        "That being said, there is a book called [ISLP](https://www.statlearning.com/) , written by Standford statistics profs, which I found it to be a great resource to start. They have their classes available on Youtube and they have publicly available Jupyter notebooks of their Hands-on labs. They start the book by teaching Linear Regression. They put a great emphasize on it for two main reason. Firstly, linear regression is a simple and yet very power full tool (still can compete with ChatGPT?). And secondly, it is the base of other concepts such as neural network. So it is a great place to start learning.\n",
+        "\n",
+        "####Keywords\n",
+        "\\#ISLP, \\# Linear Regression\n",
+        "\n",
+        "## Intro to linear regression.\n",
+        "HERE!!!!!!\n",
+        "\n",
         "\n",
         "For that reason, let's narrow down our focus to Linear regression. Linear regression is to find a line that passes through all data point. It can be generalized as a **model** ($h_\\theta)$ with some hyperparameter (the $\\theta$s). The hyperparameter are the coefficient.\n",
         "$$\n",
@@ -273,7 +270,9 @@
         "Rest of this notebook is going to be a lot of other eye openning stuff about the population, about the sample, about the population and sample statitistics, about the estimators, and about their distribution. Read on and be curious like me:) HERE!!!HERE!!!HERE!!! do terminology list for this and draw an outline for rest of the chapter\n",
         "\n",
         "\n",
-        "\n"
+        "\n",
+        "#### Keywords\n",
+        "$\\#predictors$, $\\#responses$, $\\#population$, $\\#sample$"
       ],
       "metadata": {
         "id": "-GrjszX0UXVK"
