--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -43,27 +43,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Outline\n",
-        "New outline based on [Essay guid](https://essay.app/guide#the-process-of-editing): HERE!!!HERE!!!HERE!!!HERE!!! (move linear algebra ones out)\n",
-        "\n",
-        "- How to study Machine learning?\n",
-        "- Intro to linear regression.\n",
-        "- What is  Standard error of regression coefficient? or maybe Confidence interval of a regression coefficient? Is it possible to understand them one day?\n",
-        "- What does standard and Error means here? Why it doesnt make any senese? where is error coming from? Answer likes in difference of sample and population.\n",
-        "- What are assumptions about populatiod dataset and how can we use them for samples?\n",
-        "- Definision of Sample statistic. Go beyound them and talk about the distribution of sample statistic and plot them.\n",
-        "- Estimator, standard error of them. standard error of a sample estimator.\n",
-        "- Confidence interval, what are we confident about and why? , outline of a proof. t distribution\n",
-        "\n",
-        "AT the end of each headline, list the important keywords"
-      ],
-      "metadata": {
-        "id": "IstVYGEv2dYr"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [],
       "metadata": {
         "id": "S7ukZ1whHh99"
@@ -226,6 +205,38 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Outline\n",
+        "New outline based on [Essay guid](https://essay.app/guide#the-process-of-editing): HERE!!!HERE!!!HERE!!!HERE!!! (move linear algebra ones out)\n",
+        "\n",
+        "- How to study Machine learning?\n",
+        "  read this note book. What would you learn at the end? you'll be able to explain the confindence interval of a regression coefficent to your grandma (if she was an Ex-NASA).\n",
+        "- Intro to linear regression: regression coefficients.\n",
+        "  learning: Data, model, learning algorthim, hypothesis, hypothesis parameter\n",
+        "  we predict the hypothesis parameter and not just the response\n",
+        "- When things get usually out of hand?  \n",
+        "  Regression coefficient is estimation of True population coefficent\n",
+        "  population vs sample\n",
+        "  all possible samples thus All possibilities for the coefficient estimation: rather complex.\n",
+        "- Sample vs population.\n",
+        "  Sample statistic\n",
+        "  Sample estimator.\n",
+        "  distibution of sample statistics\n",
+        "  Assumption about population.\n",
+        "  We can't make assumptions about samples, but we can make assumption over distribution of sample statistics, and estimators.\n",
+        "- Sample statistic distribution\n",
+        "  Their standard error.\n",
+        "  what do you need to calculate confidence interval.\n",
+        "  How they make sense? some open questions? is a wider range better or a smaller range.\n",
+        "\n",
+        "AT the end of each headline, list the important keywords"
+      ],
+      "metadata": {
+        "id": "IstVYGEv2dYr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## How to Study Machine learning\n",
         "\n",
         "Although I can't verify it,  sometimes I objectively feel like it might be impossible to understand what Machine Learning text books are talking about.\n",
@@ -281,16 +292,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Statistics\n",
+        "### When things get out of hand?\n",
         "\n",
-        "What is statistics? That's the only way I can start a pargraph that is about statistics. The reason is that I am not really sure what statistics is. Specially I don't know what is the difference of statistics and probability theory. The good news is that I still know what is difference of statistics and linear algebra, but still it is not enough knowledge to help write a chapter about statistics.\n",
-        "\n",
-        "[Wikipedia](https://en.wikipedia.org/wiki/Statistics) says:\n",
-        "> Statistics is the discipline that concerns the collection, organization, analysis, interpretation, and presentation of data. In applying statistics to a scientific, industrial, or social problem, it is conventional to begin with a statistical population or a statistical model to be studied.\n",
-        "\n",
-        "\n",
-        "\n",
-        "As the text says,in applying statistics, it is conventional to begin with a statistical population, or model. By the way that is exactly what I wanted to hear.\n",
         "\n",
         "Perhaps statistics is a lot about practicality. We have a population of people. Then we wanna represent them as a set of datapoints.Each datapoint contains **predictors** or $x$'s and **responses** or $y$'s. An example of predictor can be age and example of response (or predicted) can be how much debt they have.\n",
         "\n",
