more lines to outline

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -215,6 +215,7 @@
         "  we predict the hypothesis parameter and not just the response\n",
         "- When things get usually out of hand?  \n",
         "  Regression coefficient is estimation of True population coefficent\n",
+        "  It is hard to conieve the true population coefficent, simply because it doesn't exist. It is part of the theory. HERE!!!!!\n",
         "  population vs sample\n",
         "  all possible samples thus All possibilities for the coefficient estimation: rather complex.\n",
         "- Sample vs population.\n",
