--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -295,6 +295,13 @@
       "source": [
         "### When things get out of hand?\n",
         "\n",
+        "Now if you found anything helpful, in above paragraph, congradulations to me. However, if you haven't, I still have plan B to make you read my stuff.\n",
+        "\n",
+        "There is a reason why it might be hard to understand the last paragraph, and that is not because I wrote nonesense. In fact it is because there are different components that are coupled together.Also, It is also because of some hardcore assumptions, that comes from true believing and not much of common sense. I'll go through both.\n",
+        "\n",
+        "\n",
+        "Firstly, the similar sounding concepts that are very different: Algorithm, model, hypothesis.\n",
+        "\n",
         "\n",
         "Perhaps statistics is a lot about practicality. We have a population of people. Then we wanna represent them as a set of datapoints.Each datapoint contains **predictors** or $x$'s and **responses** or $y$'s. An example of predictor can be age and example of response (or predicted) can be how much debt they have.\n",
         "\n",
