--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -297,7 +297,7 @@
         "\n",
         "Now if you found anything helpful, in above paragraph, congradulations to me. However, if you haven't, I still have plan B to make you read my stuff.\n",
         "\n",
-        "There is a reason why it might be hard to understand the last paragraph, and that is not because I wrote nonesense. In fact it is because there are different components that are coupled together.Also, It is also because of some hardcore assumptions, that comes from true believing and not much of common sense. I'll go through both.\n",
+        "There is a reason why it might be hard to understand the last paragraph, and that is not because I wrote nonesense. In fact it is because there are different components that are coupled together.Also, It is also because of some hardcore assumptions, that comes from true believing and not much of common sense. I'll go through both. HERE!!!\n",
         "\n",
         "\n",
         "Firstly, the similar sounding concepts that are very different: Algorithm, model, hypothesis.\n",
